--- a/minisecsrv.cfg
+++ b/minisecsrv.cfg
@@ -5,8 +5,11 @@ Cipher aes-256-cbc
 PBKDF2Hash sha512
 PBKDF2Iterations 10240
 PBKDF2Salt 12345678
-PBKDF2Check 0123456789ABCDEF0123456789ABCDEF
+PBKDF2Check NUA46luztIkogmnbGMo0Og==
+
+# Changer d'identité avant de devenir un daemon
+User nobody
+Group nogroup
 
 # Les paramètres réseau
-#IP 127.0.0.1
-Port 1235
+Listen 1235
