Je commente les directives User et Group qui ne fonctionneront qu'en root. Listen peut utiliser des noms pour le host et le service.

--- a/minisecsrv.cfg
+++ b/minisecsrv.cfg
@@ -8,8 +8,8 @@ PBKDF2Salt 12345678
 PBKDF2Check NUA46luztIkogmnbGMo0Og==
 
 # Changer d'identité avant de devenir un daemon
-User nobody
-Group nogroup
+#User nobody
+#Group nogroup
 
 # Les paramètres réseau
 Listen localhost:1235
